refactor: apply SOLID principles for product management and integrate MapStruct